--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.4"
