--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.1.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+	implementation 'jakarta.persistence:jakarta.persistence-api:2.3.3'
+	implementation 'mysql:mysql-connector-java:8.0.27'
 }
 
 tasks.named('test') {
