--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 
 	//data
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'mysql:mysql-connector-java:8.0.27'
+	runtimeOnly 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
