--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,19 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:import/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended"
-  ],
   "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    }
   },
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "plugins": ["import", "react-hooks"],
   "rules": {
-    "react/react-in-jsx-scope": 0,
-    "react/jsx-uses-react": 0
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off"
   }
 }
