--- a/backend/stackOverflow/src/main/resources/application-server.yml
+++ b/backend/stackOverflow/src/main/resources/application-server.yml
@@ -9,6 +9,6 @@
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    password: 4321
-#    url: jdbc:mysql://localhost:3306/pre_project?serverTimezone=UTC&characterEncoding=UTF-8
+#    url: jdbc:mysql://localhost:3306/pre_project?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 #    username: dong
 ##    allowPublicKeyRetrieval=true
