--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 
 	//mysql - 'mysql:mysql-connector-java:{mysql버전}'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	//Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
