--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
@@ -21,6 +20,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +59,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.24",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.3.2"
   }
 }
