--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.24",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.63.4",
     "tailwindcss": "^3.3.2"
   }
 }
