--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.0",
-    "react-router-dom": "^6.12.1",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.3",
