--- a/backend/stackOverflow/src/main/resources/application.yml
+++ b/backend/stackOverflow/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/db_stackOverflow # jdbc:mysql://localhost:3306/{데이터베이스이름}
-    username: user_stackOverflow #유저이름
-    password: 1234 #비밀번호
+    url: jdbc:mysql://localhost:3306/ #db_stackOverflow # jdbc:mysql://localhost:3306/{데이터베이스이름}
+    username: #user_stackOverflow #유저이름
+    password: #1234 #비밀번호
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -12,4 +12,11 @@ spring:
       hibernate:
         show-sql: true
         format_sql: true
+server:
+  servlet:
+    encoding:
+      force-response: true
+#jwt:
+#  key: ${JWT_SECRET_KEY}
+#  ACCESS_EXPIRATION_TIME_SECONDS: 3600000
 
