--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
 	//data
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
 	implementation 'mysql:mysql-connector-java:8.0.32'
 
 //	//Security
