--- a/backend/stackOverflow/src/main/resources/application.yml
+++ b/backend/stackOverflow/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update  # (1) 스키마 자동 생성
+      ddl-auto: create-drop  # (1) 스키마 자동 생성
     show-sql: true      # (2) SQL 쿼리 출력
     properties:
       hibernate:
