--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
 	//data
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'mysql:mysql-connector-java:8.0.32'
+	implementation 'mysql:mysql-connector-java:8.0.32'
 
 	//Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
