--- a/backend/stackOverflow/src/main/resources/application.yml
+++ b/backend/stackOverflow/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/db_stackOverflow?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false # jdbc:mysql://localhost:3306/{????????}
-    username: user_stackOverflow #????
+    url: jdbc:mysql://localhost:3306/db_stackoverflow?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false # jdbc:mysql://localhost:3306/{????????}
+    username: Dong #????
     password: 1234 #????
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
