--- a/backend/stackOverflow/src/main/resources/application.yml
+++ b/backend/stackOverflow/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/db_stackOverflow?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false # jdbc:mysql://localhost:3306/{????????}
-    username: user_stackOverflow #????
-    password: 1234 #????
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: local
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
