--- a/backend/stackOverflow/build.gradle
+++ b/backend/stackOverflow/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
 
+	//oauth
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	//jjwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -46,6 +49,8 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson'
 
+	//임시 html?
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 tasks.named('test') {
